GNOME Bugzilla – Bug 660300
gst_memory_alignment undefined if HAVE_POSIX_MEMALIGN isn't defined
Last modified: 2011-09-28 16:48:24 UTC
CCLD libgstreamer-0.11.la Undefined symbols for architecture i386: "_gst_memory_alignment", referenced from: __default_mem_new_block in libgstreamer_0.11_la-gstmemory.o To fix: *** /Volumes/RAID1/local/gtk-stable/src/gstreamer-0.11.0/gst/gstmemory.c~ Thu Jul 28 01:25:27 2011 --- /Volumes/RAID1/local/gtk-stable/src/gstreamer-0.11.0/gst/gstmemory.c Tue Sep 27 14:52:33 2011 *************** *** 77,82 **** --- 77,84 ---- #error "No memory alignment configured" size_t gst_memory_alignment = 0; #endif + #else + size_t gst_memory_alignment = 0; #endif /* HAVE_POSIX_MEMALIGN */ struct _GstAllocator
Thanks for the bug report. Just to make sure, you do realise that 0.11 is the super-unstable-API-changes-every-day version of GStreamer, right? 0.10 is the stable series.
Yes, I know about unstable. OTOH, I got it from a tarball, not from git, so it's not quite "changes every day" ;-). It's been 2 months... And the bug is still present in the git 11.0 branch. Off-topic: Are you doing new development in your 11.0 branch and running stable off of master?
I removed the ifdef for HAVE_POSIX_MEMALIGN, it's not used. commit eda44fbc22d14b8eca987e206f467216159e2e43 Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Wed Sep 28 18:46:09 2011 +0200 memory: fix memory alignment Fix compilation when POSIX_MEMALIGN is not set. Debug the configured alignment. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=660300